# programming-4

./: .gitignore  .python-version  pyproject.toml
.github/workflows/: ci.yaml
midterm/: pyproject.toml
midterm/src/: Q1_39.py  Q2_39.py
opencv-week01/: pyproject.toml  pyrightconfig.json
opencv-week01/results/: ex01.txt  ex02.txt  ex03.txt  ex04.txt  ex05.txt  ex07.txt  ex08.txt  ex09.txt  ex10.txt
opencv-week01/src/: ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py  ex08.py  ex09.py  ex10.py
opencv-week02/: pyproject.toml
opencv-week02/results/: ex01.txt  ex02.txt
opencv-week02/src/: ex01.py  ex02.py
pre-midterm/: pyproject.toml
pre-midterm/src/: student.py  vehicle.py
scripts/: result.sh
week02/: pyproject.toml
week02/results/: ex01.txt  ex02.txt  ex03.txt  ex04.txt
week02/src/: ex01.py  ex02.py  ex03.py  ex04.py  ex1.py  ex2.py
week03/: pyproject.toml
week03/results/: ex01.txt  ex02.txt  ex03.txt
week03/src/: E_Car_class.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
week04/: pyproject.toml
week04/results/: ex01.txt  ex02.txt  ex03.txt  ex04.txt  ex05.txt  ex06.txt  ex07.txt
week04/src/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py
