[project]
name = "programming-4"
version = "0.1.0"
description = "For Kosen's Programming 4 assignments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "week01",
    "week02",
    "week03",
    "week04",
    "opencv-week01",
    "opencv-week02",
    "pre-midterm",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["I"]
ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D212",
    "ERA001",
    "INP001",
    "T201",
]
