[project]
name = "programming-4"
version = "0.1.0"
description = "For Kosen's Programming 4 assignments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "week02",
    "week03",
    "week04",
    "opencv-week01",
    "opencv-week02",
    "pre-midterm",
    "midterm",
]

[tool.uv.sources]
week02 = { workspace = true }
week03 = { workspace = true }
week04 = { workspace = true }
opencv-week01 = { workspace = true }
opencv-week02 = { workspace = true }
pre-midterm = { workspace = true }
midterm = { workspace = true }


[tool.uv.workspace]
members = [
    "week02",
    "week03",
    "week04",
    "opencv-week01",
    "opencv-week02",
    "pre-midterm",
    "midterm",
]

[dependency-groups]
dev = ["ruff>=0.14.4"]

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["I"]
ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D212",
    "ERA001",
    "INP001",
    "T201",
]
