[project]
name = "opencv-week01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pyqt5>=5.15.11",
    "pyqt6>=6.10.1",
]

[dependency-groups]
dev = [
    "matplotlib-stubs>=0.3.11",
]
